llama-server/namespace.yaml
---
{
  apiVersion: "v1",
  kind: "Namespace",
  metadata: {
    name: "llama-server",
  },
}
