llama-server/service.yaml
---
{
  apiVersion: "v1",
  kind: "Service",
  metadata: {
    name: "llama-server",
    labels: {
      app: "llama-server",
    },
  },
  spec: {
    selector: {
      app: "llama-server",
    },
    ports: [{
      port: 9931,
      targetPort: 9931,
      name: "http",
    }],
  },
}
