llama-server/openai-api-private-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama-server
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - openai-api-private.junjie.pro
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: llama-server
          port: 8080
